--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="ataHoursCalc">
+<html lang="en" ng-app="ataCashout">
   <head>
     <meta charset="utf-8" />
 
