flatten css location

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- build:css:dist css/vendor.min.css -->
+    <!-- build:css:dist vendor.min.css --> 
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <!-- /build -->
 
-    <!-- build:css:dist css/app.min.css -->
-    <link rel="stylesheet" href="css/app.css" />
+    <!-- build:css:dist app.min.css -->
+    <link rel="stylesheet" href="app.css" />
     <!-- /build -->
 
     <!-- build:js:dist js/vendor.min.js -->
