cleaning up gruntfile and generating debugging script

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,7 @@
     <!-- /build -->
 
     <!-- build:js:dist app.min.js -->
-    <script src="common/services.js"></script>
-    <script src="holiday/services.js"></script>
-    <script src="personal/services.js"></script>
-    <script src="sick/services.js"></script>
-    <script src="vacation/services.js"></script>
-    <script src="calculator/CalculatorController.js"></script>
-    <script src="calculator/directives.js"></script>
-    <script src="app.js"></script>
+    <script src="ataCashout.js"></script>
     <!-- /build -->
   </head>
   <body>
