parent directive for the calculator

--- a/src/index.html
+++ b/src/index.html
@@ -25,21 +25,7 @@
     <div class="container-fluid">
       <h1>ATA Cashout Calculator</h1>
       <p>Use this calculator to determine how best to use and save your accrued leave time.</p>
-      <div class="row" ng-controller="CalculatorController">
-        <div class="col-sm-6">
-          <job-panel member="member.current"></job-panel>
-          <accruals-panel member="member.current"></accruals-panel>
-          <button class="btn btn-success" ng-click="calc.go()">Go</button>
-          <button class="btn btn-danger" ng-click="calc.reset()">Reset</button>
-        </div>
-        <div class="col-sm-6">
-           <div class="well">
-            <strong>member</strong>
-            <pre>{{member.current | json}}</pre>
-          </div>
-          <results-panel result="member.result"/>
-        </div>
-      </div>
+      <cashout-calculator></cashout-calculator>
     </div>
   </body>
 </html>
