use angular-ui-select for autocomplete jobs and steps

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 
     <!-- build:css:dist vendor.min.css -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css" />
     <!-- /build -->
 
     <!-- build:css:dist app.min.css -->
@@ -15,6 +16,7 @@
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../node_modules/angular/angular.js"></script>
+    <script src="../bower_components/angular-ui-select/dist/select.js"></script>
     <!-- /build -->
 
     <!-- build:js:dist app.min.js -->
