--- a/src/calculator/cashoutCalculator.html
+++ b/src/calculator/cashoutCalculator.html
@@ -5,8 +5,7 @@
     <button class="btn btn-success" ng-click="calc.go()">Go</button>
     <button class="btn btn-danger" ng-click="calc.reset()">Reset</button>
   </div>
-  <div class="col-sm-6">
-    <result-wrapper heading="Holiday / Floating Holiday" member="member.current" result="member.result.holiday" ng-if="member.result.ready">
-    </result-wrapper>
+  <div class="col-sm-6" ng-if="member.result.ready">
+    <result-panel ng-repeat="config in resultPanelConfigs" config="config" />
   </div>
 </div>
