--- a/src/members/accrualsPanel.html
+++ b/src/members/accrualsPanel.html
@@ -13,16 +13,21 @@
       </div>
       <div class="form-group">
         <label>Personal Leave</label>
-        <div class="input-group">
-          <input type="number" class="form-control" placeholder="" ng-model="member.accrued.personal">
-          <div class="input-group-addon">hours</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Personal Leave Bank</label>
-        <div class="input-group">
-          <input type="number" class="form-control" placeholder="" ng-model="member.accrued.personalBank">
-          <div class="input-group-addon">hours</div>
+        <div class="row">
+          <div class="col-md-6">
+            <label>Accrued</label>
+            <div class="input-group">
+              <input type="number" class="form-control" placeholder="" ng-model="member.accrued.personal">
+              <div class="input-group-addon">hours</div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label>In bank</label>
+            <div class="input-group">
+              <input type="number" class="form-control" placeholder="" ng-model="member.accrued.personalBank">
+              <div class="input-group-addon">hours</div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="form-group">
