--- a/src/results/cashable.html
+++ b/src/results/cashable.html
@@ -1,6 +1,9 @@
 <h3>Cashable</h3>
-<p class="lead">
-  <span class="glyphicon glyphicon-time"></span> {{ result.cashable }} hours
-  <span class="glyphicon glyphicon-arrow-right" ng-if="result.cashable > 0"></span>
-  <span ng-if="result.cashable > 0"> ${{ result.cashable * member.payRate | number:2 }}</span>
+<p class="lead" ng-if="result.cashable > 0">
+    <span class="glyphicon glyphicon-time"></span> {{ result.cashable }} hours
+    <span class="glyphicon glyphicon-arrow-right"></span>
+    ${{ result.cashable * result.member.payRate | number:2 }}
+</p>
+<p ng-if="cashable <= 0">
+  No cashable hours.
 </p>
