--- a/src/results/resultPanel.html
+++ b/src/results/resultPanel.html
@@ -7,7 +7,7 @@
       <div class="{{cashableCols}}">
         <cashable result="result" />
       </div>
-      <div class="{{nonCashableCols}}">
+      <div class="{{noncashableCols}}">
         <noncashable result="result" />
       </div>
     </div>
