grunt task to deploy to gh-pages

--- a/src/index.html
+++ b/src/index.html
@@ -3,28 +3,26 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- build:css:dist vendor.min.css -->
+    <!-- build:css:dist styles/vendor.min.css -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css" />
     <!-- /build -->
 
-    <!-- build:css:dist app.min.css -->
-    <link rel="stylesheet" href="app.css" />
-    <!-- /build -->
+    <link rel="stylesheet" href="styles/app.css" />
 
-    <!-- build:js:dist vendor.min.js -->
+    <!-- build:js:dist scripts/vendor.min.js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-ui-select/dist/select.js"></script>
     <!-- /build -->
 
-    <!-- build:js:dist app.min.js -->
+    <!-- build:js:dist scripts/app.min.js -->
     <script src="ataCashout.js"></script>
     <!-- /build -->
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <h1>ATA Cashout Calculator</h1>
       <p>Use this calculator to determine how best to use and save your accrued leave time.</p>
       <cashout-calculator></cashout-calculator>
