--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 
     <!-- build:css:dist styles/vendor.min.css -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bower_components/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css" />
     <!-- /build -->
 
