--- a/src/results/cashable.html
+++ b/src/results/cashable.html
@@ -1,7 +1,7 @@
 <h3>Cashable</h3>
 <p class="lead" ng-if="result.cashable > 0">
-    <span class="glyphicon glyphicon-time"></span> <span ng-bind="cashableHours()"></span> hours
-    <span class="glyphicon glyphicon-arrow-right"></span>
+    <span class="fa fa-fw fa-clock-o"></span> <span ng-bind="cashableHours()"></span> hours
+    <span class="fa fa-fw fa-arrow-right"></span>
     $<span ng-bind="cashableAmount()"></span>
 </p>
 <p ng-if="result.cashable <= 0" class="text-muted">
