--- a/src/results/noncashable.html
+++ b/src/results/noncashable.html
@@ -2,13 +2,13 @@
   <h3>Non-Cashable <small ng-if="show.description()" ng-bind="description()"></small></h3>
   <p class="lead">
     <span ng-class="icon()"></span> <span ng-bind="hours.noncashable()"></span> hours
-    <span class="glyphicon glyphicon-arrow-right"></span> $<span ng-bind="amounts.noncashable()"></span>
+    <span class="fa fa-fw fa-arrow-right"></span> $<span ng-bind="amounts.noncashable()"></span>
   </p>
   <div ng-if="show.loss()">
     <h3>Lost <small><span ng-bind="hours.maxCarryover()"></span> hours max carryover</small></h3>
     <p class="lead">
       <span ng-class="icon('loss')"></span> <span ng-bind="hours.loss()"></span> hours
-      <span class="glyphicon glyphicon-arrow-right"></span> $<span ng-bind="amounts.loss()"></span>
+      <span class="fa fa-fw fa-arrow-right"></span> $<span ng-bind="amounts.loss()"></span>
     </p>
   </div>
 </div>
