--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,24 @@
     <!-- /build -->
   </head>
   <body>
-    <div class="container">
-      <h1>ATA Cashout Calculator</h1>
+    <div class="container-fluid">
+      <h1 class="page-header">ATA Cashout Calculator</h1>
       <p>Use this calculator to determine how best to use and save your accrued leave time.</p>
+      <p>Every attempt has been made to present accurate information. <strong>Always</strong> double check the results.</p>
       <cashout-calculator></cashout-calculator>
+      <hr>
+      <footer>
+        <div class="pull-left">
+         <p>
+            <span class="fa fa-fw fa-github"></span>
+            <a href="https://github.com/thekaveman/ata-cashout" target="_blank">ata-cashout</a> is open source software licensed under
+            <a href="https://github.com/thekaveman/ata-cashout/blob/master/LICENSE.txt" target="_blank">MIT</a>
+          </p>
+          <p>
+            Made with <span class="fa fa-fw fa-heart"></span> by <a href="https://github.com/thekaveman" target="_blank">thekaveman</a> in Venice, CA
+          </p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
