--- a/src/results/cashable.html
+++ b/src/results/cashable.html
@@ -1,9 +1,9 @@
 <h3>Cashable</h3>
-<p class="lead" ng-if="result.cashable > 0">
+<p class="lead" ng-if="show()">
     <span class="glyphicon glyphicon-time"></span> <span ng-bind="cashableHours()"></span> hours
     <span class="glyphicon glyphicon-arrow-right"></span>
     $<span ng-bind="cashableAmount()"></span>
 </p>
-<p ng-if="result.cashable <= 0" class="text-muted">
+<p ng-if="!show()" class="text-muted">
   No cashable hours.
 </p>
