add totals to calc

--- a/src/calculator/cashoutCalculator.html
+++ b/src/calculator/cashoutCalculator.html
@@ -2,10 +2,13 @@
   <div class="col-sm-6">
     <job-panel member="member.current"></job-panel>
     <accruals-panel member="member.current"></accruals-panel>
-    <button class="btn btn-success" ng-click="calc.go()">Go</button>
-    <button class="btn btn-danger" ng-click="calc.reset()">Reset</button>
+    <p>
+      <button class="btn btn-success" ng-click="calc.go()">Go</button>
+      <button class="btn btn-danger" ng-click="calc.reset()">Reset</button>
+    </p>
   </div>
   <div class="col-sm-6" ng-if="calc.ready()">
-    <result-panel ng-repeat="result in member.results" result="result" />
+    <result-panel ng-repeat="result in member.results" result="result"></result-panel>
+    <totals-panel results="member.totals"></totals-panel>
   </div>
 </div>
