--- a/src/results/totalsPanel.html
+++ b/src/results/totalsPanel.html
@@ -4,6 +4,8 @@
   </div>
   <div class="panel-body">
     <h2>Cashable</h2>
-    <span class="fa fa-fw fa-clock-o"></span> <span ng-bind="hours.cashable()"></span> hours
+    <div class="well">
+      <span class="fa fa-fw fa-clock-o"></span> <span ng-bind="hours.cashable()"></span> hours
+    </div>
   </div>
 </div>
