compute total amount

--- a/src/results/totalsPanel.html
+++ b/src/results/totalsPanel.html
@@ -6,6 +6,8 @@
     <h2>Cashable</h2>
     <div class="well">
       <span class="fa fa-fw fa-clock-o"></span> <span ng-bind="hours.cashable()"></span> hours
+      <span class="fa fa-fw fa-arrow-right"></span>
+      $<span ng-bind="amounts.cashable()"></span>
     </div>
   </div>
 </div>
