--- a/src/calculator/cashoutCalculator.html
+++ b/src/calculator/cashoutCalculator.html
@@ -9,6 +9,6 @@
   </div>
   <div class="col-sm-6" ng-if="calc.ready()">
     <result-panel ng-repeat="result in member.results" result="result"></result-panel>
-    <totals-panel results="member.totals"></totals-panel>
+    <totals-panel member="member.current" totals="member.totals"></totals-panel>
   </div>
 </div>
