--- a/src/results/resultPanel.html
+++ b/src/results/resultPanel.html
@@ -1,6 +1,6 @@
-<div class="panel panel-success result {{ result.config.id }}">
+<div class="panel panel-success result {{ result.panel.id }}">
   <div class="panel-heading">
-    <strong>{{ result.config.heading }}</strong>
+    <strong>{{ result.panel.heading }}</strong>
   </div>
   <div class="panel-body">
     <div class="row">
@@ -8,7 +8,8 @@
         <cashable result="result" />
       </div>
       <div ng-class="cols.noncashable.class()">
-        <noncashable result="result" />
+        <banked result="result" />
+        <lost result="result" />
       </div>
     </div>
   </div>
