--- a/src/calculator/introPanel.html
+++ b/src/calculator/introPanel.html
@@ -10,5 +10,5 @@ This calculator includes salary data from the <a href="http://www.smgov.net/Depa
   <em>This tool is by no means a substitute for the official rules outlined in the ATA MOU.</em>
 </p>
 <p>
-By using this calculator, you are agreeing to assume full responsibility for any use, official or otherwise, of the results it produces.
+By using this calculator, you agree to assume full responsibility for any use, official or otherwise, of the results it produces.
 </p>
