Committed by grunt-gh-pages

--- a/calculator/introPanel.html
+++ b/calculator/introPanel.html
@@ -7,7 +7,7 @@ This calculator includes salary data from the <a href="http://www.smgov.net/Depa
 </p>
 
 <p>
-  <em>This tool is by no means a substitute for the official rules outlined in the ATA MOU.</em>
+  <em>This tool is not a substitute for the official rules outlined in the ATA MOU.</em>
 </p>
 <p>
 By using this calculator, you agree to assume full responsibility for any use, official or otherwise, of the results it produces.
