--- a/src/calculator/introPanel.html
+++ b/src/calculator/introPanel.html
@@ -3,12 +3,11 @@ Determine the cashable portion of your accrued leave time.
 </p>
 
 <p>
-This calculator includes salary data from the <a href="http://www.smgov.net/Departments/HR/Employees/salary-schedule.aspx" target="_blank">FY 14-15 Salary Schedule</a> and leave time cashout rules from the <a href="http://www.smgov.net/Departments/HR/Labor_Relations/MOUs/ATA_MOU_2014-2016.aspx" target="_blank">FY 14-16 ATA MOU</a>.
+  <em>This tool is by no means a substitute for the official rules outlined in the
+    <a href="https://www.smgov.net/Departments/HR/Labor_Relations/MOUs/MOU_s.aspx" target="_blank">ATA MOU</a>.
+  </em>
 </p>
 
-<p>
-  <em>This tool is by no means a substitute for the official rules outlined in the ATA MOU.</em>
-</p>
 <p>
 By using this calculator, you agree to assume full responsibility for any use, official or otherwise, of the results it produces.
 </p>
