Committed by grunt-gh-pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="https://github.com/thekaveman/ata-cashout/blob/master/LICENSE.txt" target="_blank">MIT</a>
           </p>
           <p>
-            Made with <span class="fa fa-fw fa-heart"></span> by <a href="https://github.com/thekaveman" target="_blank">thekaveman</a> in Venice, CA
+            Made with <span class="fa fa-fw fa-heart"></span> by <a href="https://github.com/thekaveman" target="_blank">thekaveman</a>
           </p>
         </div>
       </footer>
