--- a/salaries/jobPanel.html
+++ b/salaries/jobPanel.html
@@ -4,7 +4,7 @@
   </div>
   <div class="panel-body">
     <div clas="form">
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-6">
           <div class="form-group">
             <label>Title <small>(optional)</small></label>
@@ -32,11 +32,19 @@
             </ui-select>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col-md-12">
           <div class="form-group">
-            <label>Years of Service</label>
+            <label>Hourly pay rate</label>
+            <div class="input-group">
+              <div class="input-group-addon">$</div>
+              <input type="number" class="form-control" placeholder="e.g. 14.77" ng-model="member.payRate">
+              <div class="input-group-addon">per hour</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label>Years of service</label>
             <input type="number" class="form-control" ng-model="member.serviceYears">
           </div>
         </div>
