--- a/members/accrualsPanel.html
+++ b/members/accrualsPanel.html
@@ -22,16 +22,16 @@
         <label>Sick</label>
         <div class="row">
           <div class="col-xs-6">
-            <label>Used this fiscal year</label>
+            <label>In bank at beginning of this fiscal year</label>
             <div class="input-group">
-              <input type="number" class="form-control" placeholder="" ng-model="member.used.sick">
+              <input type="number" class="form-control" placeholder="" ng-model="member.accrued.sick">
               <div class="input-group-addon">hours</div>
             </div>
           </div>
           <div class="col-xs-6">
-            <label>In bank</label>
+            <label>Used this fiscal year</label>
             <div class="input-group">
-              <input type="number" class="form-control" placeholder="" ng-model="member.accrued.sick">
+              <input type="number" class="form-control" placeholder="" ng-model="member.used.sick">
               <div class="input-group-addon">hours</div>
             </div>
           </div>
